ofSketchApp/bin/data/DocumentRoot/css/style.css
/* Sticky footer styles
-------------------------------------------------- */

html,
body {
  height: 100%;
  /* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  /* Negative indent footer by its height */
  margin: 0 auto -60px;
  /* Pad bottom by footer height */
  padding: 0 0 60px;
}

/* Set the fixed height of the footer here */
#footer {
  
}


/* Custom page CSS
-------------------------------------------------- */
/* Not required for template or sticky footer method. */

#ace-wrapper {
  position: relative;
  /* 
  NOTE: 
  #editor-container's height + #console's height must
  equal #ace-wrapper's height
  */
  height: 700px; 
}

#editor-container {
  height: 500px;
}

#editor { 

  height: 100%;
  width: 100%;
}

#console {
  height: 200px;
  /*padding-top: 10px;*/
}

#editor-messages {
  position: absolute;
  z-index: 100;
}

#wrap > .container {
  padding: 70px 15px 0;
}
.container .credit {
  margin: 20px 0;
}

#footer > .container {
  padding-left: 15px;
  padding-right: 15px;
}

code {
  font-size: 80%;
}

/* Custom editor CSS
-------------------------------------------------- */

.new-class a {
  color: #777
}

.new-class a:hover {
  color: #000;
}

/* bootstrap overrides some ace styiling :/ */
.ace_search {
  color: #000;
  font-size: .8em;
}

#toolbar {

  position: absolute; 
  top: 10px; 
  left: 60px; 
  z-index: 5;
}

@media (max-width: 768px) {

  #collapsable-navbar {
    margin-top: 50px;
  }

  #collapse-toolbar-button {
    float: right; 
    margin-top: 10px;
  }

  #toolbar {
    left: 70px; 
  }

}

/* Extra Small Devices, Phones */ 
@media (max-width : 480px) {

  /*oF logo*/
  .navbar-brand {
    display: none;
  }

  #toolbar {
    position: relative;
    left: 0px;
  }

  #toolbar .hideable {
    display: none;
  }
}

